--- a/gen/notebooks/run.ipynb
+++ b/gen/notebooks/run.ipynb
@@ -31,6 +31,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylsl import StreamInfo, StreamOutlet"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
