Refactor and package

--- a/genbci/notebooks/run.ipynb
+++ b/genbci/notebooks/run.ipynb
@@ -2,36 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading ../ssvep/data/example-epo.fif ...\n",
-      "Isotrak not found\n",
-      "    Found the data of interest:\n",
-      "        t =       0.00 ...   15996.09 ms\n",
-      "        0 CTF compensation matrices available\n",
-      "16 matching events found\n",
-      "Applying baseline correction (mode: mean)\n",
-      "Not setting metadata\n",
-      "0 projection items activated\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
     "\n",
+    "import mne\n",
     "from ssvep import SSVEP\n",
-    "from ssvep.example_data import epoch_example"
+    "from ssvep.example_data import epoch_example\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,35 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Info | 9 non-empty values\n",
-       " bads: []\n",
-       " ch_names: Fp1, AF7, AF3, F1, F3, F5, F7, FT7, FC5, FC3, FC1, C1, C3, C5, ...\n",
-       " chs: 64 EEG\n",
-       " custom_ref_applied: False\n",
-       " file_id: 4 items (dict)\n",
-       " highpass: 0.0 Hz\n",
-       " lowpass: 417.0 Hz\n",
-       " meas_date: 2016-03-04 14:03:32 UTC\n",
-       " meas_id: 4 items (dict)\n",
-       " nchan: 64\n",
-       " projs: []\n",
-       " sfreq: 256.0 Hz\n",
-       ">"
+       "(16, 64, 4096)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "epoch_example.info"
+    "epoch_example.get_data().shape"
    ]
   },
   {
